# name: test_attach_task_transform[uvloop]
  <class 'list'> [
    <class 'dict'> {
      'id': 1,
      'task': <class 'dict'> {
        'complete': False,
        'context': <class 'dict'> {
        },
        'count': 0,
        'created_at': <class 'datetime'>,
        'error': None,
        'file_size': None,
        'id': 3,
        'progress': 0,
        'step': 'ensure_index_files',
        'type': 'ensure_index_files',
      },
    },
    <class 'dict'> {
      'id': 2,
      'task': <class 'dict'> {
        'complete': False,
        'context': <class 'dict'> {
        },
        'count': 0,
        'created_at': <class 'datetime'>,
        'error': None,
        'file_size': None,
        'id': 4,
        'progress': 0,
        'step': 'clone_reference',
        'type': 'clone_reference',
      },
    },
  ]
---
# name: test_attach_task_transform_single[uvloop]
  <class 'list'> [
    <class 'dict'> {
      'id': 1,
      'task': <class 'dict'> {
        'complete': False,
        'context': <class 'dict'> {
        },
        'count': 0,
        'created_at': <class 'datetime'>,
        'error': None,
        'file_size': None,
        'id': 2,
        'progress': 0,
        'step': 'clean_references',
        'type': 'clean_references',
      },
    },
    <class 'dict'> {
      'id': 2,
      'task': None,
    },
  ]
---
